--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write  # ✅ Required for federated authentication
+  contents: read
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
